SF-Perkin/force-app/main/default/objects/BD_Tender_Payment__c/BD_Tender_Payment__c.object-meta.xml
<CustomObject>
    <label>Tender-Bid Payment</label>
    <nameField>
        <displayFormat>TPMT-{0000}</displayFormat>
        <label>Tender-Bid Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tender-Bid Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>