SF-Perkin/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Parent_Tender_Product__c.field-meta.xml
<CustomField>
    <fullName>BD_Parent_Tender_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SC-406 Renamed label to Tender-Bid</description>
    <label>Parent Tender-Bid Product</label>
    <referenceTo>BD_Tender_Product__c</referenceTo>
    <relationshipName>Tender_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>